--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lamadevblogapp",
+  "name": "blogapp",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.22.13",
+    "imagekitio-react": "^4.2.0",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-router": "^7.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
